[tool.poetry]
name = "tdd-exercises"
version = "0.1.0"
description = ""
authors = ["Martin Picard <martin.picard@thoughtworks.com>"]
readme = "README.md"
packages = [{include = "tdd_exercises"}]

[tool.poetry.dependencies]
python = ">=3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
